fuck js we ballin

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <input id="scriptToggle" style="display: none; width: 0; height: 0;" />
     <div id="titlebar" class="z-50 border-x border-gray-200 dark:border-slate-800 dark:bg-slate-800 bg-gray-50"></div>
     <div id="backgroundOverlay"></div>
 
